Fix two straggler issues from invocable refactor - ensure grouped invocable rollups don't add the same item twice, and ensure count-based rollups properly set the recalculated value prior to returning it

--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -651,9 +651,10 @@ public without sharing abstract class RollupCalculator {
     }
 
     public override Object getReturnValue() {
+      this.setReturnValue();
       // we shouldn't encourage negative counts. it's totally possible as a rollup is implemented and updates happen before
       // inserts or deletes, but it doesn't really make sense in the context of tracking
-      Integer potentialReturnVal = Integer.valueOf((Decimal) super.getReturnValue());
+      Integer potentialReturnVal = ((Decimal) super.getReturnValue()).intValue();
       return potentialReturnVal < 0 ? 0 : potentialReturnVal;
     }
 
