Committing POC to break apart mono-Rollup class

--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -1,4 +1,4 @@
-public class RollupFullBatchRecalculator extends Rollup {
+public class RollupFullBatchRecalculator extends RollupAsyncProcessor {
   private final String queryString;
   private final List<Rollup__mdt> rollupInfo;
   private final Set<Id> recordIds;
